packages/example/content/boomerang-cicd/8.0.0/how-to-guide-for-modes/05.modes-and-node.md
---
title: Mode is Node.js
index: 05
---

# Node.js mode

The Boomerang CICD Node.js mode worker will compile the built artifact into a Docker<sup>®</sup> container image, and store this image in the private, secure Boomerang Docker Registry.

To know more about Modes and Parameters:
- navigate to [Getting To Know Modes](/boomerang-cicd/getting-to-know/modes)
- navigate to [Getting To Know Parameters](/boomerang-cicd/getting-to-know/parameters)

## Parameters

The following summarizes the parameters that can be used in conjunction with `mode=nodejs`. We recommend that you set these at the `stage` or `version` property scope.

Here is a sample `.boomerang.yaml` file.

```
#General
mode=nodejs
build.tool=npm

#Slack Notifications
notifications.type=slack
notifications.slack.channel=
notifications.slack.dm=

#Filtering
filter.target=tag
filter.expression=^(\d+\.)?(\d+\.)?(\*|\d+)$

#Enable docker packaging
docker.enable=true
```

### Optional

| Parameter | Default Value  | Description |
| --- | --- | --- |
| `node.cypress.install.binary` | 0 | The location of the Cypress binary as a URL, local path, or version. `0` means do not download. This is only used in the Build Activity. |

### Build tool

`build.tool=` tells Boomerang CICD what type of build script to apply. We currently support the following types:

| **Build Tool** | **Support** |
| :------------: | :---------: |
| `build.tool=npm` |    stable     |
| `build.tool=yarn` |    stable     |

## Prerequisites

### Build tool files

The required files for the respective build tools must be in the root directory.

- `package.json`

### npm

Project dependencies are hosted on the Boomerang Artifactory instance or the public npm repository, [registry.npmjs.org](`https://registry.npmjs.org/`).

### Docker

If you have set `docker.enable=true`, a `Dockerfile` should be present in the repository for the build to be successful. By default we look in the root of the project, to provide a custom path to a Dockerfile use the `docker.file` parameter.

A sample is as follows:

```
FROM node:alpine

WORKDIR /opt

COPY . .

EXPOSE 3000

#The `CMD` command must resolve to a property in the `scripts` object in the `package.json` file. It must be in the root of the directory you are executing your `CMD` command from.
CMD ["npm", "start"]
```

## Assumptions

### Dependencies

We perform a `npm install` or a `yarn install`, depending on what `lockfiles` are present in your repository. The `node_modules` folder does _not_ need to be committed to the repository and root-level dependencies do _not_ need to be installed by the `Dockerfile`. They are installed outside the `Dockefile` and added to the context at build time of the Docker<sup>®</sup> image. This follows best practices for Docker and helps reduce the number of layers and Docker image size. If you have a more complex application with sub root-level dependencies, installation of those dependencies must be performed in the `Dockerfile`.

### Building

If you require a build step (for example, Babel compilation and minification) before the Docker image is built, the necessary processes must be performed using the `npm run build` command. By npm convention, `prebuild` and `postbuild` will automatically be executed. The CI pipeline will look for the `build` property on the `scripts` object in the `package.json` and execute it, if found. If you have other build steps to perform, scripts can be executed in the `Dockerfile`.

### Testing

We assume that you have tests written as .js files in the `test` directory at the root of the repository. We assume that Mocha can be used to execute the tests. Istanbul is used for code coverage.

### Docker Port

For the out-of-the-box Boomerang CICD Docker pipeline, there are constraints on the exposed ports for the service. The ports is `3000`.

## Scorecard

It currently does not support compilation data. All other sources of testing data for Scorecard are supported.
